--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker-compose -f docker-compose-build.yml build --parallel
-  - docker tag udagram-api-feed yooxos/udagram-api-feed:latest
-  - docker tag udagram-api-user yooxos/udagram-udagram-api-user:latest
-  - docker tag reverseproxy yooxos/reverseproxy:latest
-  - docker tag udagram-frontend yooxos/udagram-frontend:latest
+  - docker tag udagram-api-feed yooxos/udagram-api-feed
+  - docker tag udagram-api-user yooxos/udagram-udagram-api-user
+  - docker tag reverseproxy yooxos/reverseproxy
+  - docker tag udagram-frontend yooxos/udagram-frontend
   - docker images
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
