--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ script:
   - docker --version # print the version for logging
   - docker-compose -f docker-compose-build.yml build --parallel
   - docker tag udagram-api-feed yooxos/udagram-api-feed
-  - docker tag udagram-api-user yooxos/udagram-udagram-api-user
+  - docker tag udagram-api-user yooxos/udagram-api-user
   - docker tag reverseproxy yooxos/reverseproxy
   - docker tag udagram-frontend yooxos/udagram-frontend
   - docker images
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push yooxos/udagram-api-feed
-  - docker push yooxos/udagram-udagram-api-user
+  - docker push yooxos/udagram-api-user
   - docker push yooxos/reverseproxy
   - docker push yooxos/udagram-frontend
