--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,14 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker-compose -f docker-compose-build.yml build --parallel
-  - docker tag udagram-api-feed yooxos/udagram-api-feed
-  - docker tag udagram-api-user yooxos/udagram-api-user
-  - docker tag reverseproxy yooxos/reverseproxy
-  - docker tag udagram-frontend yooxos/udagram-frontend
+  - docker tag udagram-api-feed yooxos/udagram-api-feed:v1
+  - docker tag udagram-api-user yooxos/udagram-api-user:v1
+  - docker tag reverseproxy yooxos/reverseproxy:v1
+  - docker tag udagram-frontend yooxos/udagram-frontend:v1
   - docker images
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push yooxos/udagram-api-feed
-  - docker push yooxos/udagram-api-user
-  - docker push yooxos/reverseproxy
-  - docker push yooxos/udagram-frontend
+  - docker push yooxos/udagram-api-feed:v1
+  - docker push yooxos/udagram-api-user:v1
+  - docker push yooxos/reverseproxy:v1
+  - docker push yooxos/udagram-frontend:v1
